--- a/Homework3McPherson.ipynb
+++ b/Homework3McPherson.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "Use Monte Carlo simulation for the following two problems:\n",
     "\n",
-    "1. Suppose you have three bills. Two are \\\\$10 bills and the other one is a \\\\$100 bill. Your friend puts each bill in a box. So one box has \\\\$100, and the other two boxes have \\\\$10 each. You pick a box, let's say box 1, then your friend who knows what's inside the boxes, opens another box, say box 3, which has a \\\\$10 bill. Do you want to stick your choice or switch to another box in order to get the \\\\$100 bill?  ( if the 100 is inside box 2 the friend must open box 3, but if the 100 is inside box 1 the friend can open either box 2 or 3.)\n",
+    "1. Suppose you have three bills. Two are \\\\$10 bills and the other one is a \\\$100 bill. Your friend puts each bill in a box. So one box has \\\\$100, and the other two boxes have \\\\$10 each. You pick a box, let's say box 1, then your friend who knows what's inside the boxes, opens another box, say box 3, which has a \\\\$10 bill. Do you want to stick your choice or switch to another box in order to get the \\\\$100 bill?  ( if the 100 is inside box 2 the friend must open box 3, but if the 100 is inside box 1 the friend can open either box 2 or 3.)\n",
     "\n",
     "Produce the probability numbers and a graph to justify your choice to stick or switch. "
    ]
